tests/snapshots/serde__display_double_max.snap
---
source: tests/serde.rs
description: "=== SOURCE ===\n1.7976931348623157e+308"
---
179769313486231570000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000
