tests/snapshots/serde__display_error.snap
---
source: tests/serde.rs
description: "=== SOURCE ===\nnew Error(\"foo\", { cause: 1 })"
---
const v0 = new Error("foo", {
  cause: 1,
});
v0["stack"] = "Error: foo\u{a}    at <anonymous>:1:1";
v0
