tests/snapshots/serde__display_error_no_stack.snap
---
source: tests/serde.rs
description: "=== SOURCE ===\nconst err = new Error(); delete err.stack; err"
---
const v0 = new Error();
v0["stack"] = undefined;
v0
