tests/snapshots/serde__display_error_prototype_eval.snap
---
source: tests/serde.rs
description: "=== SOURCE ===\nnew EvalError(\"foo\")"
---
const v0 = new EvalError("foo");
v0["stack"] = "EvalError: foo\u{a}    at <anonymous>:1:1";
v0
