tests/snapshots/serde__display_error_prototype_range.snap
---
source: tests/serde.rs
description: "=== SOURCE ===\nnew RangeError(\"foo\")"
---
const v0 = new RangeError("foo");
v0["stack"] = "RangeError: foo\u{a}    at <anonymous>:1:1";
v0
