tests/snapshots/serde__display_error_prototype_reference.snap
---
source: tests/serde.rs
description: "=== SOURCE ===\nnew ReferenceError(\"foo\")"
---
const v0 = new ReferenceError("foo");
v0["stack"] = "ReferenceError: foo\u{a}    at <anonymous>:1:1";
v0
